# Conjugat_app

./: README.md
Backend/: README.md
Backend/Conjugat/: db.sqlite3  pyproject.toml
Backend/Conjugat/conjugat/: asgi.py  db.sqlite3  settings.py  urls.py  wsgi.py
Backend/Conjugat/conjugat/accounts/: models.py  urls.py  views.py
Backend/Conjugat/conjugat/app/: settings.py  urls.py
Backend/scraper/: .gitignore  3  Cargo.toml  Todo.md  example.env  file1.rs
Backend/scraper/src/: args.rs  helper_functions.rs  main.rs  main_processes.rs  old_helper_functions.rs
Backend/scraping/clap_scrape_test/: Cargo.toml
Backend/scraping/model_scraper/: Cargo.toml
Backend/scraping/model_scraper/src/: crud.rs  generate_urls.rs  generate_word_list.rs  json_data_struct.rs  main.rs  save_language.rs  save_main  save_main.rs  save_model.rs
Backend/scraping/model_scraper/temp/: Spanish.txt  accorder html.txt
Backend/scraping/model_scraper/temp/base/: Italian word list.txt  Spanish word list.txt
Backend/scraping/model_scraper/temp/json/languages/: languages.json
Backend/scraping/model_scraper/temp/json/models/: English.json  French.json  Italian.json  Portuguese.json  Spanish.json  endings.json  groups.json  models.json
Backend/scraping/model_scraper/temp/models/: Portuguese.txt  Spanish.txt
Backend/scraping/model_scraper/temp/urls/: English urls.txt  French urls.txt  Italian urls.txt  Portuguese urls.txt  Spanish urls.txt
Backend/scraping/reverso_scraper/: Cargo.toml
Backend/subscriptions/: .gitignore  go.mod  main.go
Research/: Elo.md
(+124 files in other folders)
