[tool.poetry]
name = "conjugat"
version = "0.1.0"
description = ""
authors = ["1twalters01 <1twalters01>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
djangorestframework = "^3.15.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
