[package]
name = "model_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
scraper = "0.17.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.32.0", features = ["full"] }
